samples/_failures_safe/1761433915_0acbf1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f61e0635.c: In function ‘main’:
./samples/SAFE/__tmp_f61e0635.c:157:9: error: expected expression at end of input
  157 |         if (from < 0 || from >= node_count || to <
      |         ^~
./samples/SAFE/__tmp_f61e0635.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f61e0635.c:157:9: error: expected declaration or statement at end of input
